# voice-coding-assistant

./: .gitignore  PLAN.md  README.md  dev-install.sh  install.bat  install.ps1  install.sh  release-local.sh  requirements.txt
.github/workflows/: ci.yml  release.yml
companion/: __init__.py  __main__.py  agent.py  config.py  listen.py  tools.py  voice.py
docs/: voca-pipeline.html
rust/: Cargo.toml  README.md
rust/src/: agent.rs  app.rs  config.rs  llm.rs  main.rs  provider.rs  tools.rs  ui.rs  voicebridge.rs
tests/: test_agent.py  test_listen.py
voca/: __main__.py  agent.py  config.py  lang.py  listen.py  tools.py  ui.py  voice.py  voice_server.py
